[tool.poetry]
name = "tddfa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytorch = "^1.13"
opencv-python = "^4"
numpy = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
