[tool.poetry]
name = "tddfa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10, <4"
opencv-python = "^4.2"
torch = "^2.0, <3"
torchvision = "*"
pyaml = "*"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
